# rcf-rs

./: Cargo.toml  README.md
.github/actions/cargo-bench-compile/: action.yml
.github/actions/cargo-check/: action.yml
.github/actions/cargo-clippy/: action.yml
.github/actions/cargo-cyclonedx-sbom/: action.yml
.github/actions/cargo-doc/: action.yml
.github/actions/cargo-examples-build/: action.yml
.github/actions/cargo-fmt/: action.yml
.github/actions/cargo-publish-dry-run/: action.yml
.github/actions/cargo-test/: action.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  security.yml  test.yml
benches/: extended.rs  forest_throughput.rs  modules.rs
core/benches/: forest_throughput.rs  modules.rs
core/examples/: tsb_ad_m_eval.rs
core/src/: bloom.rs  lib.rs  per_feature_ewma.rs  persistence.rs  space_saving.rs  tsb_ad_m.rs  vus_pr.rs
core/src/domain/: cut.rs
core/src/forest/: random_cut_forest.rs
core/src/visitor/: scalar_score.rs
core/tests/: bulk_scoring.rs
docs/: conformance.md  features.md  performance.md  threat_model.md
examples/: attribution_explain.rs  attribution_stability.rs  bootstrap.rs  calibrator.rs  cross_tenant.rs  drift_recovery.rs  early_term.rs  external_bench_driver.rs  feedback_adjust.rs  forensic.rs  group_scores.rs  nab_ablation.rs  observability.rs  quickstart.rs  severity.rs  streaming.rs  tenant_pool.rs  tenant_similarity.rs
hotpath/benches/: modules.rs
hotpath/examples/: hot_path.rs
hotpath/src/: lib.rs
hotpath/tests/: hot_path_integration.rs
meta/: Cargo.toml
meta/src/: lib.rs
meta/tests/: facade_smoke.rs
scripts/external-bench/: bench_sklearn_iforest.py  gen_points.py  variance_sweep.sh
scripts/nab/: README.md  bench_rrcf_nab.py
scripts/synthetic/: README.md
scripts/tsb_ad/: README.md  RcfBenchTsbAdM.java  bench_rrcf_tsb_ad_m.py
src/: adwin.rs  alert_cluster.rs  attribution_stability.rs  audit.rs  bootstrap.rs  calibrator.rs  config.rs  drift_aware.rs  early_term.rs  error.rs  feature_drift.rs  feedback.rs  forensic.rs  group_score.rs  histogram.rs  hot_path.rs  lib.rs  lsh_cluster.rs  meta_drift.rs  metrics.rs  online_stats.rs  persistence.rs  score_ci.rs  serde_util.rs  severity.rs  tdigest.rs  univariate_spot.rs
src/domain/: bounding_box.rs  cut.rs  divector.rs  mod.rs  point.rs  score.rs
src/forest/: mod.rs  point_store.rs  random_cut_forest.rs
src/pool/: mod.rs  tenant_pool.rs
src/sampler/: reservoir.rs
src/thresholded/: config.rs  detector.rs  grade.rs  mod.rs  stats.rs
src/tree/: mod.rs  node.rs  node_store.rs  random_cut_tree.rs
src/visitor/: combined.rs  mod.rs  scalar_score.rs  scoring.rs
tests/: attribution_stability.rs  bootstrap.rs  calibrator.rs  concept_drift.rs  cross_tenant.rs  delete.rs  early_term.rs  forensic.rs  group_scores.rs  metrics_and_histogram.rs  nab.rs  persistence_roundtrip.rs  severity.rs  tenant_pool.rs  tenant_similarity.rs  timestamps.rs  tsb_ad_m.rs  warm_reload.rs
triage/src/: feedback.rs  lsh_cluster.rs
