[workspace]
resolver = "2"
members = ["core", "triage", "hotpath", "meta"]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/maximewewer/anomstream"
homepage = "https://github.com/maximewewer/anomstream"

[workspace.dependencies]
# Internal members — path deps resolve within the workspace.
anomstream-core = { version = "0.0.0-dev", path = "core", default-features = false }
anomstream-triage = { version = "0.0.0-dev", path = "triage", default-features = false }
anomstream-hotpath = { version = "0.0.0-dev", path = "hotpath", default-features = false }

# External deps hoisted so every member pins the same version.
thiserror = { version = "2", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.3", default-features = false }
wide = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1" }
postcard = { version = "1", default-features = false, features = ["alloc"] }
rayon = { version = "1" }
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }
proptest = { version = "1" }
mimalloc = { version = "0.1", default-features = false }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unreachable = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[profile.release]
overflow-checks = true
